<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.AltaMonumento">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent">


    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/description_image_photo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codigo"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        app:endIconMode="clear_text"
        app:helperText="@string/requiered"
        app:startIconDrawable="@drawable/ic_add_bussiness">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        app:endIconMode="clear_text"
        app:helperText="@string/requiered"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descripcion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        app:endIconMode="clear_text"
        app:helperText="@string/requiered"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
        tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PhotoUrl"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_photo_url"
        app:endIconMode="clear_text"
        app:helperText="@string/requiered"
        app:startIconDrawable="@drawable/ic_link">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhotoUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="@integer/lines_url_photo"
            android:minLines="@integer/lines_url_photo"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/azul"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:icon="@drawable/ic_regresar"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:icon="@drawable/ic_save"/>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>