<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.Login">
    <LinearLayout
        android:id="@+id/CampoImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
    </LinearLayout>

    <!--campos para datos-->
    <LinearLayout
        android:id="@+id/datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/CampoImagen" >

        <!--Textfield para nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            app:helperText="@string/requiered"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Textfield contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:helperText="@string/requiered"
            app:endIconMode="password_toggle"
            android:layout_marginTop="16dp">

            <!--app:counterEnabled="true"
            app:counterMaxLength="20"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_marginStart="150dp"
            android:text=""
            />
    </LinearLayout>
    <!--espacio para botones-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toBottomOf="@id/datos">
        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validar"
            style="?attr/materialButtonStyle"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            style="?attr/materialButtonStyle"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>